examples/test/testpolicy2460.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2460
  namespace: namespace202
spec:
  podSelector:
    matchLabels:
      key11: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value15
      podSelector:
        matchLabels:
          key25: value13
          key43: value36
          key9: value23
